[gd_scene load_steps=4 format=3 uid="uid://bfvi5kylfkrhr"]

[ext_resource type="Script" path="res://scenes/ui/lose.gd" id="1_accp8"]
[ext_resource type="PackedScene" uid="uid://ck7erckqy66nt" path="res://scenes/ui/component/title_label.tscn" id="2_hvyql"]
[ext_resource type="PackedScene" uid="uid://cmrmlavbbk6e1" path="res://scenes/ui/component/goto_button.tscn" id="2_qxb8d"]

[node name="Lose" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_accp8")
ui_type = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="TitleLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_hvyql")]
layout_mode = 2
text = "You Lost It All!"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Distance Sledded:"
horizontal_alignment = 2

[node name="Label2Distance" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Time Sledded:"
horizontal_alignment = 2

[node name="Label2Time" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="ButtonTryAgain" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Try Again"

[node name="ButtonTryAgainEasy" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Try Again As Journalist"

[node name="ButtonTryAgainNormal" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Try Again on Normal"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="GotoButtonMenu" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_qxb8d")]
layout_mode = 2
text = "Main Menu"
goto_ui_id = &"menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonTryAgain" to="." method="_on_button_try_again_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonTryAgainEasy" to="." method="_on_button_try_again_easy_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonTryAgainNormal" to="." method="_on_button_try_again_normal_pressed"]
